--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -19,9 +20,13 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "angular-star-rating": "^4.0.0-beta.3",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "net": "^1.0.2",
+    "ng-starrating": "^1.0.20",
+    "ngx-rating": "0.0.9",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
     "sockjs-client": "^1.5.0",
